# CORERobotLib

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CORERobotLib.cbp  CORERobotLib.h  README.md  build.gradle  build.xml  deploy.sh  main.cpp  main.h  settings.gradle
.wpilib/: wpilib_preferences.json
ARM/: CMakeLists.txt
CORERobotLib/: CMakeLists.txt
SwerveTest/: .cproject  .project
navx-mxp/: AHRS.cpp  RegisterIO.cpp  RegisterIOI2C.cpp  RegisterIOI2C.h  RegisterIOSPI.cpp  SerialIO.cpp  (+2 more)
src/: CMakeLists.txt  COREAuto.cpp  COREAuto.h  COREAutoManager.cpp  COREAutoManager.h  COREAuton.cpp  COREAuton.h  CORECSVWriter.cpp  CORECSVWriter.h  COREConstant.cpp  COREConstant.h  COREController.cpp  COREController.h  COREDashboard.cpp  COREDashboard.h  COREDataLog.cpp  COREDataLog.h  COREDrive.cpp  COREDrive.h  COREHardware.cpp  COREHardware.h  CORELog.cpp  CORELog.h  COREMath.h  COREMotionProfile.cpp  COREMotionProfile.h  COREPID.cpp  COREPID.h  CORERobot.cpp  CORERobot.h  CORERobotLib.h  COREScheduler.cpp  COREScheduler.h  CORESubsystemsManager.cpp  CORESubsystemsManager.h  CORETask.h
src/COREControl/: CMakeLists.txt  COREController.cpp  COREController.h  COREMotionProfile.cpp  COREMotionProfile.h  COREPID.cpp  COREPID.h  COREPosPID.cpp  COREPosPID.h
src/COREController/: COREMotionProfile.cpp  COREMotionProfile.h
src/COREDashboard/: CMakeLists.txt  COREConnectionHandler.cpp  COREConnectionHandler.h  COREDashboard.cpp  COREDashboard.h  COREDriverstation.cpp  COREDriverstation.h  CORESwerveDashboard.cpp  CORESwerveDashboard.h  CORETankDashboard.cpp  CORETankDashboard.h
src/COREData/: CMakeLists.txt  COREData.cpp  COREData.h  COREData.inc  COREDataConnectionHandler.cpp  COREDataConnectionHandler.h
src/COREDrive/: CMakeLists.txt  COREDrive.cpp  COREDrive.h  COREEtherDrive.cpp  COREEtherDrive.h  CORESwerve.cpp  CORESwerve.h  CORESwerveDrive.cpp  CORESwerveDrive.h  CORETankDrive.cpp  CORETankDrive.h  SwervePosition2d.cpp  SwervePosition2d.h  SwerveRotation2d.cpp  SwerveRotation2d.h  SwerveTranslation2d.cpp  SwerveTranslation2d.h  VelocityPair.cpp  VelocityPair.h
src/COREFramework/: CMakeLists.txt  COREAuton.cpp  COREAuton.h  COREHardwareManager.cpp  COREHardwareManager.h  CORERobot.cpp  CORERobot.h  COREScheduler.cpp  COREScheduler.h  CORETask.cpp  CORETask.h
src/COREHardware/: CMakeLists.txt  COREDigital.cpp  COREDigital.h  COREEncoder.cpp  COREEncoder.h  COREJoystick.cpp  COREJoystick.h  COREMotor.cpp  COREMotor.h  CORESensor.cpp  CORESensor.h  CORETimer.cpp  CORETimer.h
src/COREKinematics/: AdaptivePursuit.cpp  AdaptivePursuit.h  InterpolatingMap.cpp  Path.cpp  Path.h  PathLoader.cpp  PathLoader.h  PathSegment.cpp  PathSegment.h  RobotFrame.cpp  RobotFrame.h  SwerveRobotFrame.cpp  SwerveRobotFrame.h  SwerveTracker.cpp  SwerveTracker.h  TankKinematics.cpp  TankKinematics.h  TankTracker.cpp  TankTracker.h
src/CORELogging/: CMakeLists.txt  COREDataLog.cpp  COREDataLog.h  CORELog.cpp  CORELog.h
src/CORESimulation/: AHRS.h  CANTalon.h  CMakeLists.txt  CORESimRobot.cpp  CORESimRobot.h  Joystick.h  WPILib.cpp  WPILib.h  WPILib312312.cpp  WPILib312312.h  mock_CANTalon.cpp
src/COREUtilities/: CMakeLists.txt  COREConstant.cpp  COREConstant.h  COREDriverstation.cpp  COREDriverstation.h  COREMath.h  CORENamedObject.cpp  CORENamedObject.h  CORETimer.cpp  CORETimer.h  COREVector.cpp  COREVector.h  Position2d.cpp  Position2d.h  Rotation2d.cpp  Rotation2d.h
src/Fake_WPILib/: AHRS.h  CANTalon.cpp  CANTalon.h  WPILib.cpp  WPILib.h
src/WaypointFollower/: AdaptivePursuit.cpp  AdaptivePursuit.h  CMakeLists.txt  COREPathConnectionHandler.cpp  COREPathConnectionHandler.h  InterpolatingMap.cpp  InterpolatingMap.h  Path.cpp  Path.h  PathLoader.cpp  PathLoader.h  PathSegment.cpp  PathSegment.h  Position2d.cpp  RobotFrame.cpp  RobotFrame.h  Rotation2d.cpp  Rotation2d.h  SwerveWaypointFollower.h  TankKinematics.cpp  TankKinematics.h  TankTracker.cpp  TankTracker.h  TankWaypointFollower.h  Translation2d.cpp  Translation2d.h  WaypointFollower.h
src/WaypointFollower/Swerve/: AdaptivePursuit.h  InterpolatingMap.cpp  InterpolatingMap.h  PathLoader.h  Position2d.h  SwerveAdaptivePursuit.cpp  SwerveAdaptivePursuit.h  SwerveInterpolatingMap.cpp  SwerveInterpolatingMap.h  SwerveKinematics.cpp  SwerveKinematics.h  SwervePath.cpp  SwervePath.h  SwervePathConnectionHandler.cpp  SwervePathConnectionHandler.h  SwervePathLoader.cpp  SwervePathLoader.h  SwervePathSegment.cpp  SwervePathSegment.h  SwervePosition2d.cpp  SwervePosition2d.h  SwerveRobotFrame.cpp  SwerveRobotFrame.h  SwerveRotation2d.cpp  SwerveRotation2d.h  SwerveTracker.cpp  SwerveTracker.h  SwerveTranslation2d.cpp  SwerveTranslation2d.h  SwerveWaypointFollower.h  Translation2d.cpp
src/WaypointFollower/Tank/: AdaptivePursuit.cpp  AdaptivePursuit.h  InterpolatingMap.cpp  InterpolatingMap.h  Path.cpp  Path.h  PathLoader.cpp  PathLoader.h  PathSegment.cpp  PathSegment.h  RobotFrame.h  Rotation2d.cpp  Rotation2d.h  TankAdaptivePursuit.cpp  TankAdaptivePursuit.h  TankInterpolatingMap.cpp  TankInterpolatingMap.h  TankKinematics.cpp  TankKinematics.h  TankPath.cpp  TankPath.h  TankPathConnectionHandler.cpp  TankPathConnectionHandler.h  TankPathLoader.cpp  TankPathLoader.h  TankPathSegment.cpp  TankPathSegment.h  TankPosition2d.cpp  TankPosition2d.h  TankRobotFrame.cpp  TankRobotFrame.h  TankRotation2d.cpp  TankRotation2d.h  TankTracker.cpp  TankTracker.h  TankTranslation2d.cpp  TankTranslation2d.h  TankWaypointFollower.h  Translation2d.cpp  Translation2d.h
src/test/cpp/: main.cpp
test/: .cproject  .project  CMakeLists.txt  COREControl_Test.cpp  COREDashboard_Test.cpp  COREDrive_Test.cpp  COREFramework_Test.cpp  COREHardware_Test.cpp  COREKinematics_Test.cpp  CORELog_Test.cpp  CORELogging_Test.cpp  CORERobotLib_Test.cbp  COREUtilities_Test.cpp  README.md  Test.cpp  main.cpp
test/CORE-Web-Interface/: README.md  test.js
test/CORE-Web-Interface/www/: autonCreator.js  dashboard.js  diagramCreator.js  index.html  input.js  main.js  math.js  spline.js
test/SwerveRobot/: DriveSubsystem.cpp  DriveSubsystem.h  Robot.cpp  Robot.h
(+62 files in other folders)
